<?xml version="1.0" encoding="utf-8"?><RelativeLayout    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:paddingBottom="@dimen/activity_vertical_margin"    android:paddingLeft="@dimen/activity_horizontal_margin"    android:paddingRight="@dimen/activity_horizontal_margin"    android:paddingTop="@dimen/activity_vertical_margin"    tools:context="com.kishorebabu.udacity.nanodegree.myappportfolio.MainActivity">    <TextView        android:id="@+id/my_apps_header"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:gravity="center_horizontal"        android:text="@string/my_nanodegree_apps"/>    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_below="@id/my_apps_header"        android:layout_marginLeft="32dp"        android:layout_marginRight="32dp"        android:layout_marginTop="16dp"        android:orientation="vertical">        <Button            android:id="@+id/spotify_streamer"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginTop="8dp"            android:background="@color/genericButton"            android:text="@string/spotify_streamer"/>        <Button            android:id="@+id/scores_app"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginTop="8dp"            android:background="@color/genericButton"            android:text="@string/scores_app"/>        <Button            android:id="@+id/library_app"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginTop="8dp"            android:background="@color/genericButton"            android:text="@string/library_app"/>        <Button            android:id="@+id/build_it_bigger"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginTop="8dp"            android:background="@color/genericButton"            android:text="@string/build_it_bigger"/>        <Button            android:id="@+id/xyz_reader"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginTop="8dp"            android:background="@color/genericButton"            android:text="@string/xyz_reader"/>        <Button            android:id="@+id/capstone_app"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginTop="8dp"            android:background="@color/highlightButton"            android:text="@string/capstone_my_own_app"/>    </LinearLayout></RelativeLayout>